add Ferromagnetic data and update figures

--- a/data/data_vis.ipynb
+++ b/data/data_vis.ipynb
@@ -55,13 +55,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Individual plots"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -72,6 +65,13 @@
     "    powers_of_two = 2 ** jnp.arange(samples.shape[-1])[::-1]  \n",
     "    indices = jnp.dot(binary_vectors, powers_of_two) \n",
     "    return indices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make state"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Figure 2, supplement"
+    "# Figure 2, supplement"
    ]
   },
   {
@@ -108,8 +108,8 @@
      "output_type": "stream",
      "text": [
       "NUM HIGH PROB SAMPLES IN TEST: 0\n",
-      "0.00024414062499999984\n",
-      "3.685929292795491e-06\n",
+      "mean of all y: 0.00024414062499999984\n",
+      "mean of test y: 3.685929292795491e-06\n",
       "NUM HIGH PROB SAMPLES IN TEST: 0\n",
       "NUM HIGH PROB SAMPLES IN TEST: 0\n",
       "NUM HIGH PROB SAMPLES IN TEST: 1\n"
@@ -143,8 +143,8 @@
     "                                                             save=False,\n",
     "                                                             save_train_inds=False)\n",
     "all_y = np.exp(target_logpsis)**2\n",
-    "print(np.mean(all_y))\n",
-    "print(np.mean(y_test))\n",
+    "print(\"mean of all y:\", np.mean(all_y))\n",
+    "print(\"mean of test y:\", np.mean(y_test))\n",
     "\n",
     "\n",
     "axs[0,0].scatter(convert_samples_to_index(x_train), y_train, marker = \".\", s=100*np.cbrt(y_train), linewidth=0.2, color='k',alpha=0.6,label=r'$\\mathrm{Train}$',zorder=1)\n",
@@ -329,6 +329,13 @@
     "plt.savefig(f'./figures/all_datasets.pdf',bbox_inches='tight')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
